# ShutterDevice

./: README.md
ASCOM/ArduinoShutterAsFwDriver/: ArduinoFW Setup.iss  ArduinoFW Test.js  ArduinoShutterAsFwDriver.csproj  ArduinoShutterAsFwDriver.sln  Driver.cs  README.txt  SetupDialogForm.cs  SetupDialogForm.designer.cs
ASCOM/ArduinoShutterAsFwDriver.test/: ArduinoShutterAsFwDriver.test.csproj  Program.cs
ASCOM/ArduinoShutterAsFwDriver.test/Properties/: AssemblyInfo.cs
ASCOM/ArduinoShutterAsFwDriver/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
Arduino/: INDIArduinoFw.ino
STL/: ETX-70 GP.stl  ETX-70 Klappe.stl  ETX-70 Servohalter.stl  ETX-70 Shutter.stl
indi-arduinoshutter/: CMakeLists.txt  README.md  indi_arduinoshutter.cpp  indi_arduinoshutter.h  indi_arduinoshutter.xml.cmake
